[gd_scene load_steps=14 format=3 uid="uid://bwm8jjfyff5y3"]

[ext_resource type="Script" path="res://Interface/Menu/scripts/new_menu.gd" id="1_gnsqw"]
[ext_resource type="PackedScene" uid="uid://nwoq2cgc3rdl" path="res://Interface/Menu/new_settings.tscn" id="2_2l5oc"]
[ext_resource type="PackedScene" uid="uid://cekcgwtk2c1dj" path="res://Interface/Transitionning/transition_screen.tscn" id="2_6faqh"]
[ext_resource type="AudioStream" uid="uid://blpfghbn0aexa" path="res://Audio/BadSound.WAV" id="3_ptb6x"]
[ext_resource type="Material" uid="uid://b24kr425h1i46" path="res://Materials/Placeholders/PlaceHolder_material_2.tres" id="4_ee7os"]
[ext_resource type="AudioStream" uid="uid://bl3vitp710heu" path="res://Audio/ButtonActivationTest.WAV" id="4_m3vx5"]
[ext_resource type="Material" uid="uid://dd4xwrwmwhmmj" path="res://Materials/Placeholders/PlaceHolder_material_1.tres" id="5_6r0nt"]
[ext_resource type="AudioStream" uid="uid://couc7t3i338ev" path="res://Audio/ambiance_test.L.wav" id="5_am7av"]
[ext_resource type="PackedScene" uid="uid://dbuulp5flt325" path="res://Models/Lights/spotlight_broken.tscn" id="6_5qrip"]
[ext_resource type="PackedScene" uid="uid://btsarlqpqa5gx" path="res://Models/Doors/door_sliding.tscn" id="7_cyt4x"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2xgh2"]
sky_top_color = Color(0, 0.12549, 0.278431, 1)
sky_horizon_color = Color(0.258824, 0.341176, 0.341176, 1)
ground_bottom_color = Color(0.2, 0.168627, 0.133333, 1)
ground_horizon_color = Color(0.611765, 0.643137, 0.74902, 1)

[sub_resource type="Sky" id="Sky_dm5rn"]
sky_material = SubResource("ProceduralSkyMaterial_2xgh2")

[sub_resource type="Environment" id="Environment_va21o"]
background_mode = 1
background_energy_multiplier = 16.0
sky = SubResource("Sky_dm5rn")
ambient_light_energy = 16.0
reflected_light_source = 1
tonemap_mode = 2
tonemap_white = 6.0
ssao_enabled = true
sdfgi_enabled = true
sdfgi_use_occlusion = true
sdfgi_read_sky_light = false
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.0
fog_sky_affect = 0.0
volumetric_fog_enabled = true

[node name="New_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnsqw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 220
theme_override_constants/margin_bottom = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Start_Game" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Credits")
focus_neighbor_right = NodePath("../Settings")
theme_type_variation = &"FlatButton"
text = "Start Game
"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Start_Game")
focus_neighbor_right = NodePath("../Credits")
theme_type_variation = &"FlatButton"
text = "Settings
"

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Settings")
focus_neighbor_right = NodePath("../Start_Game")
theme_type_variation = &"FlatButton"
text = "Credits"

[node name="Menus" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 60

[node name="MAP_SELECTOR" type="VBoxContainer" parent="MarginContainer/Menus"]
visible = false
layout_mode = 2

[node name="Map_Test" type="Button" parent="MarginContainer/Menus/MAP_SELECTOR"]
layout_mode = 2
size_flags_vertical = 10
text = "map_player_testing.tscn"

[node name="Zone1_Blocky" type="Button" parent="MarginContainer/Menus/MAP_SELECTOR"]
layout_mode = 2
text = "Zone1_blocky.tscn"

[node name="SETTINGS" parent="MarginContainer/Menus" instance=ExtResource("2_2l5oc")]
visible = false
layout_mode = 2
IsMainMenu = true

[node name="CREDITS" type="VBoxContainer" parent="MarginContainer/Menus"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "The Airport"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Title2" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 25
text = "Programmer"

[node name="Title3" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 18
text = "Gabee"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Writers"

[node name="Label2" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Winni3"

[node name="Label3" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "deku_hug"

[node name="Label5" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Gabee"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label4" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Audio Designer"

[node name="Label6" type="Label" parent="MarginContainer/Menus/CREDITS"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Winni3"

[node name="Button_click" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("3_ptb6x")
bus = &"SFX"

[node name="Start_Button" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("4_m3vx5")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("5_am7av")
autoplay = true
bus = &"Music"

[node name="Background" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1050)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(0.259985, 0.0573734, -0.963907, 0.0405692, 0.996703, 0.0702678, 0.96476, -0.0573735, 0.256801, -8.2, 3, 22.2)
current = true

[node name="Node" type="Node" parent="Background"]
process_mode = 1

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Background/Node"]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Background/Node/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(170, 1, 50)
material = ExtResource("4_ee7os")

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="Background/Node/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
radius = 2.0
height = 19.0
material = ExtResource("5_6r0nt")

[node name="CSGCylinder3D7" type="CSGCylinder3D" parent="Background/Node/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 1, 0)
radius = 2.0
height = 19.0
material = ExtResource("5_6r0nt")

[node name="CSGCylinder3D8" type="CSGCylinder3D" parent="Background/Node/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 1, 0)
radius = 2.0
height = 19.0
material = ExtResource("5_6r0nt")

[node name="CSGCombiner3D2" type="CSGCombiner3D" parent="Background/Node/CSGCombiner3D"]
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.5, 5.25, 24.9)
size = Vector3(83, 10.5, 0.4)
material = ExtResource("5_6r0nt")

[node name="CSGBox3D8" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 84.9, 5.25, 24.35)
size = Vector3(0.4, 10.5, 0.7)
material = ExtResource("5_6r0nt")

[node name="CSGBox3D9" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 84.9, 5.25, -2.5)
size = Vector3(0.4, 10.5, 45)
material = ExtResource("5_6r0nt")

[node name="CSGBox3D10" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 84.9, 6.65, 22)
size = Vector3(0.4, 7.7, 4)
material = ExtResource("5_6r0nt")

[node name="CSGBox3D4" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32458e-06, 6.65, 24.9)
size = Vector3(4, 7.7, 0.4)
material = ExtResource("5_6r0nt")

[node name="CSGBox3D3" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 43.5, 5.25, 24.9)
size = Vector3(83, 10.5, 0.4)
material = ExtResource("5_6r0nt")

[node name="CSGCombiner3D3" type="CSGCombiner3D" parent="Background/Node/CSGCombiner3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="Background/Node/CSGCombiner3D/CSGCombiner3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0500031, 9.7, 0.0499983)
size = Vector3(170.3, 1.6, 50.1)
material = ExtResource("4_ee7os")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background/Node"]
environment = SubResource("Environment_va21o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background/Node"]
transform = Transform3D(1, 0, 0, 0, -0.965926, 0.258819, 0, -0.258819, -0.965926, 0, 0, -4.6)
light_color = Color(0.831373, 0.901961, 1, 1)
light_volumetric_fog_energy = 0.5
light_bake_mode = 1
shadow_enabled = true

[node name="Spotlight_Broken" parent="Background/Node" instance=ExtResource("6_5qrip")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 24)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0

[node name="Spotlight_Broken2" parent="Background/Node" instance=ExtResource("6_5qrip")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 84, 4, 22)
light_indirect_energy = 0.0

[node name="Door_sliding" parent="Background/Node" instance=ExtResource("7_cyt4x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25)

[node name="Door_sliding4" parent="Background/Node" instance=ExtResource("7_cyt4x")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 85, 0, 22)

[node name="Transition Screen" parent="." instance=ExtResource("2_6faqh")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 220.0
offset_top = 1010.0
offset_right = 1700.0
offset_bottom = 1014.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/Start_Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/Menus/MAP_SELECTOR/Map_Test" to="." method="_on_map_test_pressed"]
[connection signal="pressed" from="MarginContainer/Menus/MAP_SELECTOR/Zone1_Blocky" to="." method="_on_zone_1_blocky_pressed"]
